--- a/Slovak/main/MiDrive.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiDrive.apk/res/values-sk/strings.xml
@@ -186,7 +186,7 @@
      <string name="cloud_storage_default_title">Cloudové úložisko</string>
      <string name="cloud_storage_full">Cloudové úložisko je plné. Inovujte svoj plán a získajte viac úložného priestoru.</string>
      <string name="cloud_storage_info_type_backup">Zálohy</string>
-     <string name="cloud_storage_info_type_drive">Disk Mi</string>
+     <string name="cloud_storage_info_type_drive">MiDrive</string>
      <string name="cloud_storage_info_type_duokan">Duokan</string>
      <string name="cloud_storage_info_type_family">Rodina</string>
      <string name="cloud_storage_info_type_others">Iné</string>
@@ -282,10 +282,9 @@
      <string name="file_info_modified">"Naposledy upravené: "</string>
      <string name="file_info_size">"Veľkosť: "</string>
      <string name="file_is_downloaded">Položka je už stiahnutá</string>
-     <string name="file_list_item_desc">%1$s | %2$s</string>
      <string name="file_no_file_desc">Zatiaľ tu nie sú žiadne položky.</string>
      <string name="file_no_file_sub_desc">Klepnutím na znamienko plus nahráte súbory.</string>
-     <string name="file_picker_loading">Len chvíľku...</string>
+     <string name="file_picker_loading">Načítavanie...</string>
      <string name="file_picker_no_file">Nie sú tu žiadne položky</string>
      <string name="file_picker_title">Vyberte položky</string>
      <string name="file_send_no_support">"Súbory tohto typu sa nedajú zdieľať"</string>
@@ -293,10 +292,8 @@
      <string name="file_size_lager_than_4g">"Veľkosť súboru nemôže presiahnuť 4 GB"</string>
      <string name="file_sort_create_time">Zoradiť podľa dátumu vytvorenia</string>
      <string name="file_sort_modify_time">Zoradiť podľa dátumu úpravy</string>
-<string name="file_sort_name">Zoradiť podľa názvu</string>
+     <string name="file_sort_name">Zoradiť podľa názvu</string>
      <string name="file_sort_size">Zoradiť podľa veľkosti</string>
-     <string name="file_status_text">%1$s | %2$s</string>
-     <string name="file_status_text_no_size">%1$s</string>
      <string name="file_upload_dialog_cancel">Zrušiť</string>
      <string name="file_upload_dialog_title">Pridať</string>
      <string name="h5_ppt_to_pdf_introduce_title">O prevode snímok do formátu PDF</string>
@@ -357,7 +354,7 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="miuix_sbl_tracking_progress_labe_release_to_refresh">Uvoľnite na obnovenie</string>
      <string name="miuix_sbl_tracking_progress_labe_up_nodata">"To je zatiaľ všetko"</string>
      <string name="miuix_sbl_tracking_progress_labe_up_none">"To je zatiaľ všetko"</string>
-     <string name="miuix_sbl_tracking_progress_labe_up_refresh">Len chvíľku…</string>
+     <string name="miuix_sbl_tracking_progress_labe_up_refresh">Načítavanie…</string>
      <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Položky sa nepodarilo načítať"</string>
 <string name="more">Viac</string>
      <string name="morning">Ráno</string>
@@ -367,9 +364,9 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="music_play_attention_network_traffic">Používanie mobilných dát na streamovanie zvuku a videa môže spôsobiť dodatočné poplatky</string>
      <string name="music_play_online">Streamovanie</string>
      <string name="music_play_online_network_not_available">"Nepodarilo sa pripojiť k sieti. Skontrolujte nastavenia siete a skúste to znova."</string>
-     <string name="music_preview_download_failed">"Nepodarilo sa načítať"</string>
-     <string name="music_preview_failed">„Tento zvukový súbor sa nedá prehrať“</string>
-     <string name="music_preview_title_loading">Len chvíľku...</string>
+     <string name="music_preview_download_failed">Nepodarilo sa načítať</string>
+     <string name="music_preview_failed">Tento zvukový súbor sa nedá prehrať</string>
+     <string name="music_preview_title_loading">Načítavanie...</string>
      <string name="music_preview_title_play">Prehráva sa</string>
      <string name="my_about_item">O Mi Drive</string>
      <string name="my_feedback_item">Spätná väzba</string>
@@ -381,12 +378,12 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="navigation_file">Súbory</string>
      <string name="navigation_my">Profil</string>
      <string name="navigation_tips">500+</string>
-     <string name="navigation_transport">Prestupy</string>
+     <string name="navigation_transport">Prenosy</string>
      <string name="night">Večer</string>
-     <string name="no_recent_activity">Nie sú tu žiadne nedávne položky</string>
+     <string name="no_recent_activity">Žiadne položky</string>
      <string name="noon">Poludnie</string>
      <string name="not_set">Nenastavené</string>
-     <string name="not_support_upload_file_for_overseas_users">"Nahrávanie nie je dostupné mimo pevninskej Číny"</string>
+     <string name="not_support_upload_file_for_overseas_users">"Nahrávanie nie je dostupné mimo Číny"</string>
      <string name="notification_channel_remind">Pripomenutia</string>
      <string name="notification_channel_service">Služby</string>
      <string name="operation_delete_cancel">Zrušiť</string>
@@ -418,8 +415,8 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="permission_phone_title">Informácie o zariadení</string>
      <string name="permission_storage_desc">Pristupujte k fotkám a súborom a ukladajte ich na tomto zariadení</string>
      <string name="permission_storage_title">Úložisko</string>
-     <string name="picker_bottom_btn_text">Odovzdať</string>
-     <string name="picker_bottom_text_desc">"Odovzdať do "</string>
+     <string name="picker_bottom_btn_text">Nahrať</string>
+     <string name="picker_bottom_text_desc">"Nahrať do "</string>
      <string name="picker_permission_failed">"Nepodarilo sa udeliť povolenie. Bez neho nebude táto funkcia fungovať."</string>
      <string name="play_metered_network_dialog_cancel">Zrušiť</string>
      <string name="play_metered_network_dialog_desc">"Vaše zariadenie nie je pripojené k sieti Wi-Fi. Prehrávate pomocou mobilných dát?"</string>
@@ -428,12 +425,12 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="pm">PM</string>
      <string name="ppt_to_pdf">Prevedené do formátu PDF</string>
      <string name="pre_permission_management">Podrobnosti povolení</string>
-     <string name="pre_privacy_policy">Zásady ochrany osobných údajov</string>
+     <string name="pre_privacy_policy">Ochrana osobných údajov</string>
      <string name="pre_privacy_recall">Odvolanie súhlasu</string>
-     <string name="pre_user_agreement">Zmluva s používateľom</string>
+     <string name="pre_user_agreement">Podmienky používania</string>
      <string name="preference_copied">\"%1$s\" bolo skopírované do schránky.</string>
      <string name="preview">Ukážka</string>
-     <string name="privacy_policy">Zásady ochrany osobných údajov</string>
+     <string name="privacy_policy">Ochrana osobných údajov</string>
      <string name="privacy_recall_dialog_msg">"Ak budete pokračovať, odvoláte svoj súhlas so Zásadami ochrany osobných údajov Mi Drive. Osobné údaje, ktoré už boli zhromaždené a uchovávané, budú vymazané počas konkrétneho obdobia v súlade s platnými zákonmi a predpismi, pokiaľ to nebude potrebné v opačnom prípade. Keďže Mi Drive poskytuje svoje služby na základe zhromažďovania potrebných osobných údajov, vaše odvolanie súhlasu sa bude považovať za odmietnutie prijatia služieb Mi Drive. Odvolať súhlas teraz?"</string>
      <string name="privacy_recall_dialog_title">Odvolanie súhlasu</string>
      <string name="privacy_update_dialog_msg">Zásady ochrany osobných údajov služby Disk Mi boli aktualizované: Prečítajte si a vyjadrite súhlas s novou verziou Zásady ochrany osobných údajov skôr, než budete pokračovať.</string>
@@ -441,7 +438,7 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="privacy_user_notice_dialog_exit_btn_text">Ukončiť</string>
      <string name="privacy_user_notice_dialog_msg">"Nebudete môcť naďalej používať Mi Disk, pokiaľ nevyjadríte súhlas s novou verziou jeho Zásad ochrany osobných údajov. Súhlasíte teraz s aktualizovanými Zásadami ochrany osobných údajov?"</string>
      <string name="privacy_user_notice_dialog_ok_btn_text">Súhlasím</string>
-     <string name="privacy_user_notice_dialog_title">Pozor</string>
+     <string name="privacy_user_notice_dialog_title">Upozornenie</string>
      <string name="private_empty_desc">Tu môžete ukladať súbory súkromne.</string>
      <string name="private_empty_sub_desc">Skúste presunúť súbory sem alebo ich priamo odovzdať.</string>
      <string name="private_folder_name">Súkromné ​​súbory</string>
@@ -468,8 +465,8 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="save_pdf">Uložiť</string>
      <string name="saving_pdf">Ukladá sa…</string>
      <string name="search_cancel">Zrušiť</string>
-     <string name="search_error_hint">Zadajte kľúčové slová na vyhľadávanie</string>
-     <string name="search_file_no_file">"Nepodarilo sa nájsť výsledky"</string>
+     <string name="search_error_hint">Vyhľadať</string>
+     <string name="search_file_no_file">Nič sa nenašlo</string>
      <string name="search_hint">Hľadať</string>
      <string name="search_max_length">Vaša požiadavka na vyhľadávanie je príliš dlhá</string>
      <string name="search_menu_title">Hľadať</string>
@@ -477,7 +474,7 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="select_dir_tail">Vybraté: %s</string>
      <string name="select_move_title">Presunúť do</string>
      <string name="select_new_folder">Nový priečinok</string>
-     <string name="select_upload_title">Odovzdať do</string>
+     <string name="select_upload_title">Nahrať do</string>
      <string name="send">Odoslať</string>
 <string name="set_lock_password_dialog_msg">Pre fotografie, poznámky a súbory sa použije heslo na ochranu súkromia.</string>
      <string name="set_lock_password_dialog_title">Nastavte nové heslo</string>
@@ -486,7 +483,6 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="setting_title">Nastavenia</string>
      <string name="start_download">Začína sa sťahovanie…</string>
      <string name="start_upload">Spúšťa sa nahrávanie…</string>
-     <string name="status_bar_notification_info_overflow">999+</string>
      <string name="stay_tuned">Sledujte nás</string>
      <string name="stay_tuned_sub_desc">Táto služba je momentálne dostupná iba v pevninskej Číne</string>
      <string name="storage_internal">Interné úložisko</string>
@@ -496,25 +492,16 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="storage_manage_title">Zmeniť plán cloudového úložiska</string>
      <string name="storage_manage_upgrade">Inovácia</string>
      <string name="storage_sd_card">Karta SD</string>
-     <string name="storage_unit_b">%s B</string>
-     <string name="storage_unit_gb">%s GB</string>
-     <string name="storage_unit_kb">%s kB</string>
-     <string name="storage_unit_mb">%s MB</string>
      <string name="storage_usb">Zariadenie USB</string>
-     <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
-     <string name="text_select_all">Vybrať všetko</string>
-     <string name="text_select_nothing">Zrušiť výber všetkých</string>
+     <string name="text_select_all">Všetko</string>
+     <string name="text_select_nothing">Zrušiť výber</string>
      <string name="tip_shortcut_added_success">Úspešne vytvorené</string>
      <string name="tip_shortcut_already_added">Skratka na ploche už existuje</string>
-     <string name="title_blank">" "</string>
      <string name="today">Dnes</string>
      <string name="tomorrow">Zajtra</string>
      <string name="transfer_done">Hotovo</string>
-     <string name="transfer_done_file_count">%1$s (%2$s)</string>
-     <string name="transfer_file_count">%1$s (%2$s)</string>
-     <string name="transfer_progress_text">%1$s / %2$s</string>
      <string name="transport_end_button">Upraviť</string>
-     <string name="transport_title">Prestupy</string>
+     <string name="transport_title">Prenosy</string>
      <string name="unlock_password_dialog_msg">Použije sa heslo na ochranu súkromia. Funguje to pre fotografie, poznámky a súbory.</string>
      <string name="unlock_password_dialog_title">Heslo na ochranu súkromia</string>
      <string name="update_dialog_button_cancel">Teraz nie</string>
@@ -526,13 +513,13 @@ Uistite sa, že ako systémový účet MIUI používate aktuálny účet Mi."</s
      <string name="update_failed_no_app_info">"Nepodarilo sa získať inštalačný balík"</string>
      <string name="update_no_network">"Nepodarilo sa pripojiť k sieti. Skontrolujte nastavenia siete a skúste to znova."</string>
      <string name="update_no_update">Aktuálna verzia je aktuálna</string>
-     <string name="update_progress_dialog_content">Preberá sa…</string>
-     <string name="upload_done">Odovzdané úspešne</string>
+     <string name="update_progress_dialog_content">Sťahovanie…</string>
+     <string name="upload_done">Nahrávanie úspešne</string>
      <string name="upload_done_info_for_sys_content_with_fail">%1$s. %2$s.</string>
-     <string name="upload_done_info_for_sys_title">Odovzdané úspešne. Klepnutím zobrazíte.</string>
+     <string name="upload_done_info_for_sys_title">Nahrávanie úspešne. Klepnutím zobrazíte.</string>
      <string name="upload_fail">"Nepodarilo sa odovzdať"</string>
      <string name="upload_file_list_is_empty">Vyberte položky na odovzdanie</string>
-     <string name="upload_list">Odovzdávanie</string>
+     <string name="upload_list">Nahrávanie</string>
      <string name="upload_list_empty">Zatiaľ tu nie sú žiadne položky</string>
      <string name="upload_metered_network_dialog_cancel">Zrušiť</string>
      <string name="upload_metered_network_dialog_desc">"Vaše zariadenie nie je pripojené k sieti Wi-Fi. Nahrať položky pomocou mobilných dát?"</string>
