--- a/Slovak/main/InCallUI.apk/res/values-sk/strings.xml
+++ b/Slovak/main/InCallUI.apk/res/values-sk/strings.xml
@@ -369,4 +369,5 @@
      <string name="relay_grant_permissions_on_phone">Udeľte povolenie na nahrávanie zvuku do telefónu</string>
 	
     <string name="voice_control_deny_permission_msg">Hlasové ovládanie sa teraz nedá použiť. Najprv povoľte tejto aplikácii nahrávať zvuk.</string>
+    <string name="caller_info_name_delimiter">" alebo "</string>    
 </resources>
