--- a/Slovak/main/CleanMaster.apk/res/values-sk/strings.xml
+++ b/Slovak/main/CleanMaster.apk/res/values-sk/strings.xml
@@ -878,5 +878,15 @@
 <string name="guide_dc_dialog_message_new">Ostáva menej ako %d GB voľného miesta na úložisku. Vaše zariadenie môže byť spomalené. Vyčistite vaše úložisko.</string>
     <string name="guide_secure_dialog_message_new">Skóre optimalizácie je menej ako %d bodov. Chcete ho optimalizovať?</string>
     <string name="low_memory_clean_dialog_msg_new">Najskôr vymažte aspoň %d MB súborov</string>
-    <string name="tips_low_storage_dialog_msg_storage_new">Máte mej ako %s úložiska. Odinštalujte aplikácie ktoré nepoužívate.</string>          	
+    <string name="tips_low_storage_dialog_msg_storage_new">Máte mej ako %s úložiska. Odinštalujte aplikácie ktoré nepoužívate.</string>      
+    
+<string name="exo_download_completed">Sťahovanie dokončené</string>
+     <string name="exo_download_description">Stiahnuť</string>
+     <string name="exo_download_downloading">Sťahuje sa</string>
+     <string name="exo_download_failed">Sťahovanie zlyhalo</string>
+     <string name="exo_download_notification_channel_name">Stiahnuté súbory</string>
+     <string name="exo_download_paused">Sťahovanie pozastavené</string>
+     <string name="exo_download_paused_for_network">Sťahovanie čaká na sieť</string>
+     <string name="exo_download_paused_for_wifi">Sťahovanie čaká na Wi-Fi</string>
+     <string name="exo_download_removing">Odstraňuje sa stiahnutý súbor</string>        	
 </resources>
