--- a/Slovak/main/Mirror.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Mirror.apk/res/values-sk/strings.xml
@@ -251,5 +251,90 @@
     <string name="low_version_dialog_message">Aktualizujte MIUI+ vo vašom PC z plus.miui.com.</string>
     <string name="low_version_dialog_title">Aktualizujte MIUI+</string>
     <string name="pcmode_not_support_multi_window">PC režim nepodporuje zobrazenie viacerých okien.</string>
-     <string name="settings_permission_description">Podrobnosti o povoleniach</string>               
+     <string name="settings_permission_description">Podrobnosti o povoleniach</string>            
+     
+<string name="pad_fullscreen_sink_activity_label">Môj telefón</string>
+     <string name="pad_mirror_device_locked_tips_1">Zariadenie je uzamknuté</string>
+     <string name="pad_mirror_device_locked_tips_2">Klepnutím na obrazovku ju prebudíte</string>
+     <string name="pad_mirror_device_locked_tips_3">Prebudenie dvojitým klepnutím</string>
+     <string name="pad_mirror_disconnect_tips_1">Pripojenie sa stratilo</string>
+     <string name="pad_mirror_disconnect_tips_2">Uistite sa, že sú na oboch zariadeniach zapnuté Wi-Fi a Bluetooth a skúste to znova.</string>
+     <string name="pad_mirror_disconnect_tips_2_china">Uistite sa, že sú na oboch zariadeniach zapnuté Wi-Fi a Bluetooth a skúste to znova.</string>
+     <string name="pad_settings_bluetooth_enable_summary">Zapnite Bluetooth, aby ste mohli nájsť zariadenia v okolí. Zapnúť teraz?</string>
+     <string name="pad_settings_bluetooth_enable_title">Zapnúť Bluetooth</string>
+     <string name="pad_settings_connect_pad_group">Práca s tabletom</string>
+     <string name="pad_settings_connect_pc_group">Práca s počítačom</string>
+     <string name="pad_settings_connect_phone_group">Práca s telefónom</string>
+     <string name="pad_settings_connect_summary1">Stiahnite si a nainštalujte MIUI+ do svojho počítača: www.miui.com</string>
+     <string name="pad_settings_connect_summary2">Naskenujte pomocou mobilného zariadenia QR kód na obrazovke počítača. Môžete na to použiť viacero systémových aplikácií (napr. Scanner, Camera, Mi Browser).</string>
+     <string name="pad_settings_feature_characteristics_summary_1">Skopírujte text do svojho mobilného zariadenia a vložte ho do počítača, pridajte obrázky a synchronizujte úpravy v dokumentoch.</string>
+     <string name="pad_settings_feature_characteristics_summary_2">Presuňte položky do zariadenia a zo zariadenia presunutím myšou.</string>
+     <string name="pad_settings_feature_characteristics_summary_3">Stačí priblížiť zariadenie k predtým pripojenému počítaču, aby sa znova automaticky pripojilo.</string>
+     <string name="pad_settings_feature_dnd_summary">"Zobraziť upozornenia mobilného zariadenia na počítači"</string>
+     <string name="pad_settings_feature_dnd_summary_phone">"Zobraziť upozornenia mobilného zariadenia na počítači"</string>
+     <string name="pad_settings_feature_dnd_title">DND</string>
+     <string name="pad_settings_feature_intro">O tejto funkcii</string>
+     <string name="pad_settings_handoff_app_summary">Pokračujte v úlohách v tej istej aplikácii na druhom zariadení</string>
+     <string name="pad_settings_handoff_app_title">Aplikácie</string>
+     <string name="pad_settings_handoff_category_title">Zistite, ako používať odovzdávanie</string>
+     <string name="pad_settings_handoff_clipboard_summary">Skopírujte na jedno zariadenie a bez problémov prilepte do druhého</string>
+     <string name="pad_settings_handoff_clipboard_title">Schránka</string>
+     <string name="pad_settings_handoff_device_title">Pripojené zariadenie</string>
+     <string name="pad_settings_handoff_disable">Vypnuté</string>
+     <string name="pad_settings_handoff_disconnect">Nepripojené</string>
+     <string name="pad_settings_handoff_enable_bluetooth">Ak chcete nájsť zariadenia v okolí, zapnite Bluetooth</string>
+     <string name="pad_settings_handoff_enable_disconnect">Udržiavajte zariadenia blízko seba so zapnutým Bluetooth</string>
+     <string name="pad_settings_handoff_p2p_summary">Pripojte sa k prenosnému hotspotu jediným dotykom</string>
+     <string name="pad_settings_handoff_p2p_title">Hotspot</string>
+     <string name="pad_settings_handoff_video_summary">Pokračovanie v prehrávaní videa od miesta, kde ste skončili, na inej obrazovke</string>
+     <string name="pad_settings_handoff_video_title">Videá</string>
+     <string name="pad_settings_handoff_wps_summary">Zobrazujte, upravujte a ukladajte dokumenty pri prepínaní medzi zariadeniami</string>
+     <string name="pad_settings_handoff_wps_title">Dokumenty</string>
+     <string name="pad_settings_how_use">Používanie odovzdania</string>
+     <string name="pad_settings_pad_handoff_summary">Použite odovzdanie s aplikáciami, schránkou, videami a ďalšími položkami na druhom zariadení priradenom k ​​vášmu účtu Mi</string>
+     <string name="pad_settings_pc_history_title">História pripojenia</string>
+     <string name="pad_settings_pc_trusted_title">Pripojiť automaticky</string>
+     <string name="pad_settings_pc_use_tile">O tejto funkcii</string>
+     <string name="pad_settings_phone_handoff_summary">Použite odovzdanie s aplikáciami, schránkou, videami a ďalšími položkami na druhom zariadení priradenom k ​​vášmu účtu Mi</string>
+     <string name="pad_settings_phone_handoff_title">Handoff</string>
+     <string name="pad_settings_scanner_summary">Pripojte sa k MIUI+ pomocou QR kódu</string>
+     <string name="pad_settings_trusted_delete_dialog_msg">"Po odstránení zo zoznamu sa k tomuto zariadeniu nebudete môcť automaticky pripojiť."</string>
+     <string name="pad_settings_trusted_tips">Automaticky sa pripojiť k vybraným zariadeniam v okolí, keď je zapnuté rozhranie Bluetooth a Wi-Fi</string>
+     <string name="pad_settings_trusted_tips_china">Automaticky sa pripojiť k vybraným zariadeniam v okolí, keď je zapnuté rozhranie Bluetooth a Wi-Fi</string>        
+     
+<string name="cast_mcc_tips_button_cancel">Ignorovať</string>
+     <string name="cast_mcc_tips_button_ok">Nastavenia</string>
+     <string name="cast_mcc_tips_message">Ak sa chcete vyhnúť oneskoreniam pri používaní MIUI+, pripojte obe zariadenia k rovnakej sieti Wi-Fi.</string>
+     <string name="cast_mcc_tips_title">Zmeňte nastavenia siete Wi-Fi</string>
+     <string name="clipboard_tip">Skopírované z %1$s</string>
+     <string name="connect_fail_busy_mishare">Zdá sa, že druhé zariadenie práve prenáša súbory. Počkajte, kým sa prenos nedokončí, a skúste to znova.</string>
+     <string name="custom_define_permission_desc_android.permission_group.MICROPHONE">Na prenos zvuku počas prenášania</string>
+     <string name="custom_define_permission_desc_android.permission_group.STORAGE">Na prenos súborov medzi zariadeniami</string>
+     <string name="device_max_screen_count_toast">Toto zariadenie podporuje iba otváranie dvoch okien súčasne</string>
+     <string name="download_percent">%1$d%%</string>
+     <string name="enable_wifi_alert_message_for_photo_relay_china">MIUI+ vám umožňuje plynule prepínať medzi zariadeniami, keď potrebujete upraviť fotografie nasnímané telefónom na tablete. Zapnúť Wi-Fi, aby ste použili handoff?</string>
+     <string name="fullscreen_sink_activity_label">Môj telefón</string>
+     <string name="invisible_mode_dialog_cancel">Zrušiť</string>
+     <string name="invisible_mode_dialog_message">"V režime inkognito nie je možné použiť kombináciu obrazovky MIUI+. Najprv vypnite režim inkognito."</string>
+     <string name="invisible_mode_dialog_positive">Vypnúť</string>
+     <string name="invisible_mode_dialog_title">„Ste inkognito“</string>
+     <string name="invisible_mode_toast">Najskôr vypnite režim inkognito</string>
+     <string name="loading">Len sekundu...</string>
+     <string name="loading_view_abort_close_text">Zavrieť</string>
+     <string name="loading_view_abort_text">"Časový limit pripojenia vypršal.
+Zatvorte túto stránku a skúste to znova."</string>
+     <string name="mirror_to_float_window_mode">Prepnúť na plávajúce okno</string>
+     <string name="mirror_to_full_screen_mode">Prepnúť do režimu celej obrazovky</string>
+     <string name="mishare_interrupting_message">Ak teraz ukončíte reláciu, prebiehajúce prenosy budú prerušené. Aj tak skončiť?</string>
+     <string name="mishare_interrupting_title">Prerušiť prenosy?</string>
+     <string name="not_set">Nenastavené</string>
+     <string name="ok">OK</string>
+     <string name="permission_access_nearby_device">Prístup k zariadeniam v okolí</string>
+     <string name="screen_num_over_limit">"Nie je možné otvoriť ďalšie okná"</string>
+     <string name="softap_notification_action">Pripojiť</string>
+     <string name="softap_notification_message">Nie sú k dispozícii žiadne siete Wi-Fi. Chcete sa pripojiť k tomuto hotspotu?</string>
+     <string name="softap_notification_message_china">Nie sú k dispozícii žiadne siete Wi-Fi. Chcete sa pripojiť k tomuto hotspotu?</string>
+     <string name="softap_notification_title">"Pripojte sa k hotspotu %1$s"</string>
+     <string name="sub_screen_lock_message">"Odomknite svoj telefón
+pokračovať“</string>     
 </resources>  
